--- a/style.css
+++ b/style.css
@@ -1,59 +1,34 @@
 *{
-	margin: 0;
-	padding: 0;
+	margin: 0px;
+	padding: 11px;
 }
-div.main{
-	width: 400px;
-	margin: 100px auto 0px auto;
-}
-h2{
-	text-align: center;
-	padding: 20px;
-	font-family: sans-serif;
-}
-div.register{
-	background-color: rgba(0,0,0,0.5);
-	width: 100%;
-	font-size: 18px;
-	border-radius: 10px;
-	border: 1px solid rgba(225,225,225,0.3);
-	box-shadow: 2px 2px 15px rgba(0,0,0,0.3);
-	color: #fff;
+h1{
 
+	text-align: center;
+	color: #000;
+	font-size: 65px;
+	
+   }
+   .how{
+   	border-radius: 10px;
+   }
+   .src{
+   	font-size: 45px;
+   	background-color:skyblue ;
+   	margin-left: 200px;
+   	margin-top: 2px;
+   	margin-right:200px;
+   	padding-left:80px;
+   	padding-bottom: 2px;
+   	border: 3px solid;
+   	font-family: serif;
+   	border-radius: 100px;
+   
 }
-form#register{
-	margin: 40px;
-}
-label{
-	font-family: sans-serif;
-	font-size: 18px;
-	font-style: italic;
-}
-input#name{
-	width: 300px;
-	border: 1px solid #ddd;
-	border-radius: 3px;
-	outline: 0;
-	padding: 7px;
-	background-color: #fff;
-	box-shadow: inset 1px 1px 5px rgba(0,0,0,0.3);
-}
-input#submit{
+.trp{
 	width: 200px;
 	padding: 7px;
 	font-size: 16px;
-	font-family: sans-serif;
-	font-weight: 600;
-	border: none;
-	border-radius: 3px;
-	background-color: red;
-	color:white;
-	cursor: pointer;
-	border: 1px solid rgba(225,225,225,0.3);
-	box-shadow: 1px  1px 5px rgba(0,0,0,0.3);
-	margin-bottom: 20px;
-
-}
-label,span,h2{
-	text-shadow: 1px 1px 5px rgba(0,0,0,0.3);
+	font-family: sans-serif; 
+	background-color: skyblue;
 }
